[package]
name = "research_block_cipher"
version = "0.1.0"
authors = ["megumish <keishi.kawada@handii.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blowfish = "0.4.0"
base64 = "0.10.1"
failure = "0.1.5"
byteorder = "1.3.2"
